aks-openspeedtest-pod-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-openspeedtest  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-openspeedtest
  template:
    metadata:
      labels:
        app: aks-openspeedtest
    spec:
      containers:
      - name: aks-openspeedtest
        image: openspeedtest/latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: aks-openspeedtest  
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: aks-openspeedtest
